# TesWG

./: README.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: build.gradle  local.properties
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/dji/FPVDemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
